# chatterbox-onnx

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  PROJECT_TTS_ADDON.md  README.md  build_out.txt  vcpkg-configuration.json  vcpkg.json
cmake/: CompilerFlags.cmake  ExternalDependencies.cmake  FindFFmpeg.cmake  FindONNXRuntime.cmake  tokenizer.cmake
include/: ConfigFlags.h
include/common/audio/: FFmpegUtils.h  WavUtils.h
include/common/core/: ThreadPool.h  core.h
include/common/core/zib/: wait_mpsc_queue.hpp
include/common/network/: DownloadManager.h  HttpInterface.h  ModelDownloadManager.h
include/common/utils/: Logging.h  OnnxUtil.h
include/tts/: AudioLoader.h  ChatterboxTTS.h  ModelDownloader.h  OnnxSessionManager.h  TensorUtils.h  Tokenizer.h  VoiceConditionalsCache.h  WavWriter.h
src/common/audio/: FFmpegUtils.cpp
src/common/network/: CurlHttpInterface.cpp  DownloadManager.cpp  ModelDownloadManager.cpp
src/common/utils/: OnnxUtil.cpp
src/tts/: AudioLoader.cpp  ChatterboxTTS.cpp  ModelDownloader.cpp  OnnxSessionManager.cpp  TensorUtils.cpp  Tokenizer.cpp  VoiceConditionalsCache.cpp  WavWriter.cpp  main.cpp
tools/: analyze_onnx_profile.py  batch_tokenize.py  convert_cond.py  download_models.py  pretokenize.py
